--- a/package.json
+++ b/package.json
@@ -25,19 +25,15 @@
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "concurrently": "^3.5.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "nodemon": "^1.11.0"
+    "eslint-plugin-react": "^7.7.0"
   },
   "bugs": {
     "url": "https://github.com/danielaine3/ParnOrgs/issues"
   },
   "homepage": "https://github.com/danielaine3/ParnOrgs#readme",
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "connect-mongo": "^2.0.1",
     "express": "^4.15.4",
